Fixed MAGETWO-12771: Admin Panel UI issues - Layout - make requirement mark impossible to be displayed alone on another label line - labels are covered by fields - 'please wait' icon isn't in the middle of the page - tabs are displayed broken - dashboard looks broken for not fully maximized window - smashed form - smashed form - make columns min width depended on contained head elements (title, dropdown inside etc) - probably it makes sence to make column border closer to end of content (for minimum empty place) - 'pay pal settlement reports' page

--- a/app/design/adminhtml/magento_backend/css/admin.css
+++ b/app/design/adminhtml/magento_backend/css/admin.css
@@ -2391,7 +2391,8 @@ table tbody tr:nth-child(odd):hover th {
     z-index: 999;
 }
 
-.loading-old {
+.loading-old,
+.loading-mask {
     position: fixed;
     left: 0;
     top: 0;
@@ -3645,15 +3646,6 @@ table tbody tr:nth-child(odd):hover th {
     z-index: 2;
 }
 
-.adminhtml-dashboard-index .side-col {
-    width: 38%;
-    padding: 1%;
-}
-
-.adminhtml-dashboard-index .main-col {
-    width: 60%;
-}
-
 /* Sidebar and main column vertical separator */
 .main-col:after,
 .side-col:after {
@@ -4589,7 +4581,7 @@ table tbody tr:nth-child(odd):hover th {
     min-width: 121px;
 }
 
-.grid .filter .range input {
+.grid .filter .range .date input {
     margin-top: 0;
     vertical-align: middle;
     width: 80%;
@@ -4842,6 +4834,7 @@ tr.dynamic-grid input.input-text {
     white-space: normal;
 }
 
+/* will be deleted after checking entire back-end
 table .col-draggable {
     width: 1%;
 }
@@ -4879,6 +4872,11 @@ table .col-frontend_label {
     width: 25%;
 }
 
+.ui-dialog .selection-search table .col-select {
+    width: 25%;
+}
+*/
+
 table .col-draggable .draggable-handle {
     position: relative;
     top: 0;
@@ -4889,21 +4887,19 @@ table .col-draggable .draggable-handle {
     text-align: left;
 }
 
-.ui-dialog .selection-search table .col-select {
-    width: 25px;
-}
-
 /*
     Data table
 -------------------------------------- */
 .data-table {
-    border-collapse: inherit; /* do not remove this! without this rule in FF when table has only 1 row bottom and side borders disappear*/
+    border-collapse: separate; /* do not remove this! without this rule in FF when table has only 1 row bottom and side borders disappear*/
     width: 100%;
 }
 
 .data-table thead,
 .data-table tfoot,
-.data-table th {
+.data-table th,
+.accordion .config .data-table thead th,
+.accordion .config .data-table tfoot td {
     background: #fff;
     color: #666;
 }
@@ -4915,7 +4911,8 @@ table .col-draggable .draggable-handle {
 }
 
 .data-table td,
-.data-table tbody tr td {
+.data-table tbody tr td,
+.accordion .config .data-table td {
     background: #fff;
     padding: 5px 7px;
     font-size: 12px;
@@ -4941,7 +4938,8 @@ table .col-draggable .draggable-handle {
 }
 
 .data-table tbody tr:nth-child(odd) td,
-.data-table tbody tr:nth-child(odd):hover td {
+.data-table tbody tr:nth-child(odd):hover td,
+.accordion .config .data-table tbody tr:nth-child(odd) td {
     background: #fbfaf6;
 }
 
@@ -4950,7 +4948,8 @@ table .col-draggable .draggable-handle {
 }
 
 .data-table tfoot tr:last-child td,
-.data-table tfoot tr:last-child th {
+.data-table tfoot tr:last-child th,
+.accordion .config .data-table tfoot tr:last-child td {
     border: 0;
 }
 
