--- a/app/design/adminhtml/magento_backend/css/debug.css
+++ b/app/design/adminhtml/magento_backend/css/debug.css
@@ -368,18 +368,6 @@ ul.messages li.success-msg li:before {
     height: 100px;
 }
 
-.dashboard-container {
-    border-radius: 0;
-}
-
-.dashboard-container.col-2-left-layout:before {
-    left: 40%;
-}
-
-.dashboard-container #diagram_tab {
-    margin: 20px 20px 0;
-}
-
 /* TODO: arrange configuration tables */
 .accordion .collapseable.disabled {
     background: #f1f1f1;
@@ -456,7 +444,6 @@ ul.messages li.success-msg li:before {
 .accordion .config select,
 .accordion .config textarea {
     width: 100%;
-    border-radius: 3px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
